# flask

./: .gitignore  hello.html  pyproject.toml  requirements.txt
flaskr/: __init__.py  auth.py  blog.py  db.py  test.py
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py
