[project]
name = "flaskr"
version = "1.0.0"
dependencies = [
    "flask",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['flaskr']

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.coverage.run]
branch = true
source = ['flaskr']
